# learn2spell

./: .env.defaults  Dockerfile  Makefile  README.md  setup.cfg  setup.py
conf/: requirements
src/: learning.py  main.py  spells.py  utility.py
test/: conftest.py  fixture.py  test_unit.py
