[metadata]
name=learn2spell
version=0.0.0
description=A Machine Learning Experiment with DND Spells
long_description= file: README.md

[options]
packages=find:
package_dir=
	=src
python_requires=>=3.7
install_requires=
	requests
	python-dotenv
	tensorflow
	backoff

[options.packages.find]
where=src

[options.extras_require]
dev=
	pytest
	pytest-cov
	requests_mock

[tool:pytest]
junit_family=legacy
testpaths=test